Address review comments: simplify assertions to compare same types
Co-authored-by: pvary <peter.vary.apache@gmail.com>